--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-router": "^6.0.0-alpha.5",
     "react-router-dom": "^6.0.0-alpha.5",
     "react-scripts": "3.4.1",
+    "react-test-renderer": "^16.13.1",
     "redux": "^4.0.5",
     "yup": "^0.29.0"
   },
